- Fixed unreadable text on error page in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,8 @@ body.dark-mode {
 }
 
 body.dark-mode h1,
-body.dark-mode h4 {
+body.dark-mode h4,
+body.dark-mode p {
   color: #ffffff;
 }
 
@@ -47,7 +48,8 @@ body.light-mode {
 }
 
 body.light-mode h1,
-body.light-mode h4 {
+body.light-mode h4,
+body.light-mode p {
   color: #000000;
 }
 
